--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/tax
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.sql.init.mode=always
+spring.sql.init.mode=never
 server.error.include-binding-errors=always
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
